# yarusto

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  converter.rs  error.rs  lib.rs  main.rs  model.rs
src/model/: cases_config.rs  config.rs  raw.rs  types.rs
src/model/raw/: config1.rs
src/model/types/: duration.rs  judge.rs  memory_size.rs
