[package]
name = "yarusto"
authors = ["NJUPT-SAST"]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/NJUPT-SAST/yarusto"
rust-version = "1.74"

[dependencies]
anyhow = { version = "1.0.82", features = ["backtrace"] }
async-compression = { version = "0.4.8", features = ["zstdmt", "tokio"] }
async-stream = "0.3.5"
async-walkdir = "1.0.0"
byte-unit = "5.1.4"
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.30"
indicatif = "0.17.8"
once_cell = "1.19.0"
prost = "0.12.4"
serde = { version = "1.0.199", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
tokio-tar = "0.3.1"
tokio-util = "0.7.10"
toml = "0.8.12"
walkdir = "2.5.0"

# [build-dependencies]
# clap = { version = "4.5.4", features = ["derive"] }
# clap_complete = "4.5.2"
# clap_mangen = "0.2.20"

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"
