[package]
name = "yarusto"
authors = ["NJUPT-SAST"]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/NJUPT-SAST/yarusto"
rust-version = "1.74"

[dependencies]
anyhow = { version = "1.0.82", features = ["backtrace"] }
clap = { version = "4.5.4", features = ["derive"] }
indicatif = "0.17.8"
serde = { version = "1.0.199", features = ["derive"] }
serde_yaml = "0.9.34"
toml = "0.8.12"
zip = "1.1.2"

# [build-dependencies]
# clap = { version = "4.5.4", features = ["derive"] }
# clap_complete = "4.5.2"
# clap_mangen = "0.2.20"

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"
