[package]
name = "yarusto"
authors = ["NJUPT-SAST"]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/NJUPT-SAST/yarusto"
rust-version = "1.74"

[dependencies]
anyhow = { version = "1.0.82", features = ["backtrace"] }
async-walkdir = "1.0.0"
clap = { version = "4.5.4", features = ["derive"] }
futures-lite = "2.3.0"
indicatif = "0.17.8"
regex = "1.10.4"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9.34"
tar = "0.4.40"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
toml = "0.8.12"
zip = "1.1.2"
zstd = "0.13.1"

# [build-dependencies]
# clap = { version = "4.5.4", features = ["derive"] }
# clap_complete = "4.5.2"
# clap_mangen = "0.2.20"

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"
